@@ -7,7 +7,9 @@ Post-v2.6.0
      * DSCP marking is now supported, via the new northbound QoS table.
      * IPAM now supports fixed MAC addresses.
      * Support for source IP address based routing.
-     * ovn-trace can now trace put_dhcp_opts and put_dhcp_optsv6 actions.
+     * ovn-trace:
+       - New --ovs option to also print OpenFlow flows.
+       - put_dhcp_opts and put_dhcp_optsv6 actions may now be traced.
      * Support for managing SSL and remote connection configuration in
        northbound and southbound databases.
    - Fixed regression in table stats maintenance introduced in OVS
